# articlextract

./: README.md  pyproject.toml  req_fetch.py
articlextract/: __init__.py  extractor.py
articlextract.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
articlextract/cleaners/: html_cleaner.py
articlextract/parsers/: jsonld_parser.py
articlextract/strategies/: base.py  embedded_js.py  jsonld.py  meta_tags.py
tests/: test_jsonld.py  test_meta.py
