[project]
name = "articlextract"
version = "0.1.0"
description = "Lightweight static HTML article metadata and content extractor."
authors = [
    {name = "Devesh Yadav"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/deveshyadav905/articlextract"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"