[project]
name = "articlextract"
version = "0.1.0"
description = "Lightweight static HTML article metadata and content extractor."
authors = [
    {name = "Devesh Yadav"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2"
]

[project.urls]
Homepage = "https://github.com/deveshyadav905/articlextract"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
